--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       text-align: center;
       align-items: center;
     }
-<img src="1.PNG">
+<img src="1.PNG" alt="Italian Trulli">
 </style>
 </head>
 <body>
