--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       text-align: center;
       align-items: center;
     }
-<img src="1.PNG" alt="Italian Trulli">
+  <a href="https://credit.neuzx.com/the-best-colleges-for-cheap-accommodation-for-students-in-the-united-states/?utm_source=Nadeem&utm_medium=AA&utm_campaign=AA"><img src="1.PNG"></a>
 </style>
 </head>
 <body>
