--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<meta http-equiv="refresh" content="15; URL=https://credit.neuzx.com/the-best-colleges-for-cheap-accommodation-for-students-in-the-united-states/?utm_source=Zakhmi&utm_medium=AA&utm_campaign=AA" />
 <style>
   .center {
   text-align: center;
