--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="15; URL=https://credit.neuzx.com/the-best-colleges-for-cheap-accommodation-for-students-in-the-united-states/?utm_source=Zakhmi&utm_medium=AA&utm_campaign=AA" />
+<meta http-equiv="refresh" content="15; URL=https://credit.neuzx.com/the-best-colleges-for-cheap-accommodation-for-students-in-the-united-states/?utm_source=Zakhmi&utm_medium=BB&utm_campaign=BB" />
 <style>
   .center {
   text-align: center;
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<a href="https://credit.neuzx.com/the-best-colleges-for-cheap-accommodation-for-students-in-the-united-states/?utm_source=Zakhmi&utm_medium=AA&utm_campaign=AA"><img src="6688178334013386898.jpg"></a>
+<a href="https://credit.neuzx.com/the-best-colleges-for-cheap-accommodation-for-students-in-the-united-states/?utm_source=Zakhmi&utm_medium=AA&utm_campaign=AA"><img src="349.PNG"></a>
 
 <h1 style="text-align: center;"><b><span style="color: #2b00fe; font-size: x-largest;">💗<a href="https://credit.neuzx.com/the-best-colleges-for-cheap-accommodation-for-students-in-the-united-states/?utm_source=Zakhmi&utm_medium=AA&utm_campaign=AA">Free XXX Videos Download</a>👈</span></b></h1>
       
